// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`timeline/LocalTrack with a memory track matches the snapshot of the memory track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      title="My Description"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Memory
      </button>
      <button
        class="timelineTrackCloseButton"
        title="Hide track"
        type="button"
      />
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackMemory"
        style="height: 40px; --graph-height: 25px; --markers-height: 15px;"
      >
        <div
          class="timelineMarkers timelineMarkersMemory"
          data-testid="TimelineMarkersMemory"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="400"
                width="400"
              />
            </div>
          </div>
        </div>
        <div
          class="timelineTrackMemoryGraph"
        >
          <div>
            <canvas
              class="timelineTrackMemoryCanvas"
              height="25"
              width="400"
            />
          </div>
          <div
            class="timelineEmptyThreadIndicator"
          />
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a network track matches the snapshot of the network track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        Network
      </button>
      <button
        class="timelineTrackCloseButton"
        title="Hide track"
        type="button"
      />
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackNetwork"
        style="height: 35px;"
      >
        <div
          class="react-contextmenu-wrapper treeViewContextMenu"
        >
          <canvas
            class="timelineTrackNetworkCanvas"
            height="35"
            width="400"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-marker-index="10"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--red-60); left: 200px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-marker-index="11"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: #000; left: 200px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-marker-index="12"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--blue-50); left: 266.6666666666667px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-marker-index="13"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--grey-40); left: 266.6666666666667px;"
          />
          <div
            class="timelineVerticalIndicatorsLine"
            data-marker-index="14"
            data-testid="vertical-indicator-line"
            style="--vertical-indicator-color: var(--magenta-60); left: 333.33333333333337px;"
          />
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a thread track matches the snapshot of a local track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      title="DOM Worker
Thread: \\"DOM Worker\\" (33)
Process: \\"tab\\" (222)"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        DOM Worker
      </button>
      <button
        class="timelineTrackCloseButton"
        title="Hide track"
        type="button"
      />
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        class="timelineTrackThread expanded"
      >
        <div
          class="timelineMarkers"
          data-testid="TimelineMarkersJank"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="400"
                width="400"
              />
            </div>
          </div>
        </div>
        <div
          class="threadActivityGraph"
        >
          <div>
            <canvas
              class="threadActivityGraphCanvas threadActivityGraphCanvas"
              height="400"
              width="400"
            >
              <h2>
                Activity Graph for 
                DOM Worker
              </h2>
              <p>
                This graph shows a visual chart of thread activity.
              </p>
            </canvas>
          </div>
        </div>
        <div
          class="threadSampleGraph"
        >
          <div>
            <canvas
              class="threadSampleGraphCanvas threadSampleGraphCanvas"
              height="400"
              width="400"
            >
              <h2>
                Stack Graph for 
                DOM Worker
              </h2>
              <p>
                This graph charts the stack height of each sample.
              </p>
            </canvas>
          </div>
        </div>
        <div
          class="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with an IPC track matches the snapshot of the IPC track 1`] = `
<li
  class="timelineTrack timelineTrackLocal"
>
  <div
    class="timelineTrackRow timelineTrackLocalRow"
  >
    <div
      class="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
    >
      <button
        class="timelineTrackNameButton"
        type="button"
      >
        IPC — Empty
      </button>
      <button
        class="timelineTrackCloseButton"
        title="Hide track"
        type="button"
      />
    </div>
    <div
      class="timelineTrackTrack"
    >
      <div
        style="height: 25px; --markers-height: 25px;"
      >
        <div
          class="timelineMarkers timelineMarkersIPC"
          data-testid="TimelineMarkersIPC"
        >
          <div
            class="react-contextmenu-wrapper"
          >
            <div>
              <canvas
                class="timelineMarkersCanvas"
                height="400"
                width="400"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;
